Fixed overflowing names in SideMenu

--- a/src/components/SideMenu/Client.module.css
+++ b/src/components/SideMenu/Client.module.css
@@ -26,6 +26,11 @@
 }
 
 .title .name {
+  flex-grow: 1;
+  width: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: .9rem;
 }
 
