--- a/src/components/SideMenu/Project.module.css
+++ b/src/components/SideMenu/Project.module.css
@@ -27,6 +27,11 @@
 }
 
 .title .name {
+  flex-grow: 1;
+  width: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: .85rem;
   font-weight: bold;
   color: #262626;
