--- a/src/components/SideMenu/Report.module.css
+++ b/src/components/SideMenu/Report.module.css
@@ -18,6 +18,11 @@
 }
 
 .title .name {
+  flex-grow: 1;
+  width: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: .85rem;
   color: #262626;
 }
